--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ spring.application.name=Gerenciador-de-cursos
 server.port=8081
 
 # Configurações do MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/dio_springboot?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=italo123
+spring.datasource.url=jdbc:mysql://mysql-db:3306/gerenciador_cursos?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:italo123}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Mostra o SQL no terminal (
